Implement log message parsers and corresponding tests for ASCII and Hex16 formats

--- a/components/log_message_parser/CMakeLists.txt
+++ b/components/log_message_parser/CMakeLists.txt
@@ -5,6 +5,9 @@ target_include_directories(I_log_message_parser INTERFACE
 
 add_library(log_message_parser STATIC
     private/structure.cc
+    private/semantics.cc
+    private/hex16_body_parser.cc
+    private/ascii_body_parser.cc
 )
 
 target_include_directories(log_message_parser PRIVATE
