Add log message component and update parser dependencies
- Introduced log_message component with Message class for structured log messages.
- Updated log_message_parser to include dependency on I_log_message.
- Enhanced test configurations to link against the new log_message component.

--- a/components/log_message_parser/CMakeLists.txt
+++ b/components/log_message_parser/CMakeLists.txt
@@ -16,6 +16,7 @@ target_include_directories(log_message_parser PRIVATE
 
 target_link_libraries(log_message_parser
     I_log_message_parser
+    I_log_message
 )
 
 add_subdirectory(test)
