--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.20)
 project(brion_pipelines LANGUAGES CXX VERSION 0.1.0)
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wpedantic -Werror")
-# If we are not on Windows, add -Wextra
-if (NOT WIN32)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra")
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -Wpedantic")
+elseif (MSVC)
+    set(CMAKE_CXX_FLAGS "/W4 /WX /permissive-")
 endif()
 
 enable_testing()
