--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -Wpedantic")
 elseif (MSVC)
-    set(CMAKE_CXX_FLAGS "/W4 /WX /permissive-")
+    set(CMAKE_CXX_FLAGS "/W4 /WX /permissive- /EHsc")
 endif()
 
 enable_testing()
