Re-enable Doxygen documentation generation in CMakeLists.txt and update README.md to clarify dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,21 +11,21 @@ endif()
 enable_testing()
 add_subdirectory(components)
 
-# FIND_PACKAGE(Doxygen)
+find_package(Doxygen)
 
-# IF(DOXYGEN_FOUND)
-#     CONFIGURE_FILE(Doxyfile ${CMAKE_BINARY_DIR}/Doxyfile @ONLY)
-#     ADD_CUSTOM_TARGET(docs
-#         ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/Doxyfile
-#         WORKING_DIRECTORY ${CMAKE_DINARY_DIR}
-#         COMMENT "Generating project documentation with Doxygen" VERBATIM
-#     )
-#     # add_custom_target(copy-images ALL
-#     #     COMMAND ${CMAKE_COMMAND} -E copy_directory
-#     #     ${CMAKE_SOURCE_DIR}/docs_base/images
-#     #     ${CMAKE_BINARY_DIR}/docs/html/images
-#     # )
-#     # ADD_DEPENDENCIES(docs copy-images)
-# ELSE()
-#     MESSAGE(WARNING "Doxygen not found, documentation won't be generated.")
-# ENDIF()
+if(DOXYGEN_FOUND)
+    configure_file(Doxyfile ${CMAKE_BINARY_DIR}/Doxyfile @ONLY)
+    add_custom_target(docs
+        ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/Doxyfile
+        WORKING_DIRECTORY ${CMAKE_DINARY_DIR}
+        COMMENT "Generating project documentation with Doxygen" VERBATIM
+    )
+    # add_custom_target(copy-images ALL
+    #     COMMAND ${CMAKE_COMMAND} -E copy_directory
+    #     ${CMAKE_SOURCE_DIR}/docs_base/images
+    #     ${CMAKE_BINARY_DIR}/docs/html/images
+    # )
+    # ADD_DEPENDENCIES(docs copy-images)
+ELSE()
+    MESSAGE(WARNING "Doxygen not found, documentation won't be generated.")
+ENDIF()
