Very simple, first version of the app

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -4,3 +4,4 @@ include(GoogleTest)
 add_subdirectory(log_message)
 add_subdirectory(log_message_parser)
 add_subdirectory(log_message_organizer)
+add_subdirectory(app)
