--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(googletest)
 include(GoogleTest)
+add_subdirectory(clipp)
 
 add_subdirectory(log_message)
 add_subdirectory(log_message_parser)
